[FIX] subnav jumping

--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -2582,6 +2582,7 @@ li.menu-item:hover ul.sub-menu li {
 li.menu-item:hover ul.sub-menu li a {
 	border-bottom: none;
 	font-size: .8em;
+	height: 30px;
 }
 
 li.menu-item:hover ul.sub-menu li a:hover {
@@ -2594,7 +2595,6 @@ ul.sub-menu {
 	float: right;
 	background: @white;
 	width: 90px;
-	//padding-left: 5px;
 }
 
 @media (max-width: 480px) {
